--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,8 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2 {
+h1,
+h2 {
   text-align: center;
 }
 
@@ -37,19 +38,46 @@ h1, h2 {
   cursor: pointer;
 }
 
-button:disabled, input:disabled {
+button:disabled,
+input:disabled {
   display: none;
 }
 
 @media only screen and (max-width: 600px) {
   .container {
-    max-width: 90%; 
-    margin: 30px auto; 
-    padding: 10px; 
+    max-width: 90%;
+    margin: 30px auto;
+    padding: 10px;
   }
 
   .form-group input,
   .form-group button {
-    width: calc(100% - 20px); 
+    width: calc(100% - 20px);
+  }
+}
+
+#audio-input-select {
+  width: -webkit-fill-available;
+}
+
+#loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #88b1f0;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
